# test_workmate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
api/v1/: schema_extensions.py  urls.py
api/v1/cats/: filters.py  permissions.py  serializers.py  urls.py  views.py
api/v1/users/: urls.py  views.py
cats/: admin.py  constants.py  models.py
cats/management/commands/: load_data.py
cats/migrations/: 0001_initial.py  0002_initial.py  0003_cat_author_alter_cat_birth_date_alter_cat_breed_and_more.py  0004_alter_breed_name.py
cats/utils/: breeds.txt  factory.py
config/: settings.py  urls.py
infra/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh  nginx.conf
users/: admin.py  models.py
users/migrations/: 0001_initial.py
